<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="@dimen/margin_and_padding_default">

    <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

        <ImageView
                android:id="@+id/sport_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:adjustViewBounds="true"
                android:contentDescription="@string/default_icd"/>

        <TextView
                android:id="@+id/title"
                android:padding="@dimen/margin_and_padding_default"
                android:text="@string/title_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/sport_image"
                android:theme="@style/ThemeOverlay.AppCompat.Dark"
                style="@style/TextAppearance.AppCompat.Headline"/>

        <TextView
                android:id="@+id/news_title"
                android:padding="@dimen/margin_and_padding_default"
                android:text="@string/news_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/sport_image"
                android:textColor="?android:textColorSecondary"
                style="@style/TextAppearance.AppCompat.Subhead"/>

        <TextView
                android:id="@+id/sub_title"
                android:padding="@dimen/margin_and_padding_default"
                android:text="@string/sports_info_placeholder"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/news_title"
                style="@style/TextAppearance.AppCompat.Subhead"/>

    </RelativeLayout>

</androidx.cardview.widget.CardView>
